# vincenty

./: CMakeLists.txt  Doxyfile  version.h.in
.github/workflows/: release.yml  test.yml
include/: ellipsoid.h  geopoint.h  somelib.h
src/: main.cpp  somelib.cpp
tests/: gtest.cc
